prevents scrollbar from disappearing when a modal/menu appears
https://stackoverflow.com/questions/8701754/just-disable-scroll-not-hide-it

--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -2,7 +2,9 @@
 @import 'variables';
 
 body.menu-active {
-  overflow: hidden;
+  overflow-y: scroll;
+  position: fixed; // preserves space for scrollbar when it always appears (like when you have a mouse with scroll wheel plugged in: http://cory.la/o4DycB)
+  width: 100%;
 }
 
 #site-container {
